<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="#ffffffff"
          android:layout_width="16.0dip"
          android:layout_height="fill_parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/traffic_setup_fragment"
            android:background="#ffffffff"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView style="@style/txt_three"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/trafficCorrection"

                  android:layout_marginTop="10dp"/>
        <View android:background="@color/black"
              android:layout_width="fill_parent"
              android:layout_height="1.0dip"
              android:layout_marginTop="10.0dip"/>
        <LinearLayout android:orientation="vertical"
                      android:id="@+id/setupMouthTraffic_LinearLayout"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                >
            <TextView style="@style/txt_one"
                      android:layout_marginTop="5dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/mouthTraffic"/>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10.0dip">

                <TextView android:id="@+id/showMouthTrafficUnit_TextView"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="10.0dip"
                          style="@style/txt_three"
                          android:text="300"
                        />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/trafficUnit"
                        style="@style/txt_three"
                        android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <include layout="@layout/menu_borderless"></include>
        </LinearLayout>


        <LinearLayout android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:id="@+id/setupDate_LinearLayout"
                      android:layout_height="wrap_content"
                >
            <TextView style="@style/txt_one"
                      android:layout_marginTop="5dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/mouthAccount"/>
                <TextView style="@style/txt_three"
                          android:id="@+id/setDate_textView"
                          android:layout_marginTop="10.0dip"
                          android:layout_marginLeft="10.0dip"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/initMounthAccountDate"/>
            <include layout="@layout/menu_borderless"></include>
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
                      android:id="@+id/showUsedTraffic_LinearLayout"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      >
            <TextView style="@style/txt_one"
                      android:layout_marginTop="5dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/usedTraffic"/>
            <TextView style="@style/txt_three"
                      android:layout_marginTop="10.0dip"
                      android:layout_marginLeft="10.0dip"
                      android:id="@+id/trafficUnit_textView"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <include layout="@layout/menu_borderless"></include>
        </LinearLayout>
        <TextView
                  android:id="@+id/correction_to_operator_tv"
                  android:textColor="@color/green_light"
                  android:layout_marginTop="15dp"
                  android:textSize="18sp"
                  android:gravity="center"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/question"
                  />
        <TextView style="@style/txt_three"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20.0dip"
                  android:text="@string/trafficSuperCorrection"/>
        <View android:background="@color/black"
              android:layout_width="fill_parent"
              android:layout_height="1.0dip"
              android:layout_marginTop="10.0dip"/>
        <RelativeLayout android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp">
            <TextView style="@style/txt_one"
                      android:id="@+id/showPersentOfNetwork_textView"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                    android:text="@string/mouthWarming"/>
            <TextView style="@style/txt_three"
                      android:text="240MB  80%"
                      android:layout_alignParentRight="true"
                      android:layout_marginRight="20dp"
                      android:id="@+id/showWarnmingValue_textView"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </RelativeLayout>
        <SeekBar android:id="@+id/warningNetwork_seekBar"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"/>
        <View android:background="@color/transparent_60"
              android:layout_width="fill_parent"
              android:layout_height="1.0dip"
              android:layout_marginTop="10.0dip"/>
        <RelativeLayout
                android:layout_marginTop="5dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
            <TextView style="@style/txt_one"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/autoCheckTitle"/>
            <Switch android:id="@+id/check_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="true"/>
        </RelativeLayout>
    </LinearLayout>
    <View android:background="#ffffffff"
          android:layout_width="16.0dip"
          android:layout_height="fill_parent"/>
</LinearLayout>