<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >
    <ImageView
            android:id="@+id/iv_drawable"
            android:layout_width="match_parent"
            android:layout_height="256dip"
            android:padding="12dip"
            />
    <LinearLayout android:orientation="horizontal" android:id="@+id/bottom_linearLayout"
                  android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@+id/Left_linearLayout" android:layout_width="192.0dip"
                      android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical"
                          android:id="@+id/topLeft_LinearLayout" android:layout_width="fill_parent"
                          android:layout_height="125.0dip">
                <TextView android:textSize="14.0sp" android:textColor="#cc000000" android:id="@+id/today_used_summary"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_marginTop="36.0dip" android:text="@string/DayUsed" android:alpha="0.8"/>
                <FrameLayout android:id="@+id/topLeftOutSide_FrameLayout" android:layout_width="wrap_content"
                             android:layout_height="fill_parent">
                    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical"
                                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                                  android:layout_marginTop="30.0dip">
                        <ImageView android:id="@+id/traffic_no_set_up_stats_drawable_1"
                                   android:background="@drawable/traffic_have_no_setup_detail_stats"
                                   android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:visibility="invisible"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:id="@+id/topLeftInside_LinearLayout"
                                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_marginTop="2.0dip">
                        <TextView style="@style/txt_one" android:layout_marginTop="10dp"
                                  android:id="@+id/TrafficNumber_textView" android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"/>
                        <TextView style="@style/txt_one" android:layout_marginTop="10dp"
                                  android:id="@+id/TrafficUnit_textView" android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
            <View android:background="#cc000000" android:layout_width="wrap_content" android:layout_height="0.5dip"
                  android:layout_marginLeft="14.0dip" android:alpha="0.15"/>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical"
                          android:id="@+id/bottomRight_LinearLayout" android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="#cc000000"
                          android:id="@+id/mouth_traffic_summary" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:layout_marginTop="32.25dip"
                          android:text="@string/mouthTraffic" android:alpha="0.8"/>
                <FrameLayout android:id="@+id/bottomRightOutside_FrameLayout" android:layout_width="wrap_content"
                             android:layout_height="fill_parent">
                    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical"
                                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                                  android:layout_marginTop="32.0dip">
                        <ImageView android:id="@+id/traffic_no_set_up_stats_drawable_2"
                                   android:background="@drawable/traffic_have_no_setup_detail_stats"
                                   android:layout_width="wrap_content" android:layout_height="wrap_content"
                                   android:visibility="invisible"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:id="@+id/bottomRightInside_LinearLayout"
                                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_marginTop="2.0dip">
                        <TextView style="@style/txt_one" android:layout_marginTop="10dp"
                                  android:id="@+id/AllTrafficNumber_textView" android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"/>
                        <TextView style="@style/txt_one"  android:layout_marginTop="10dp"
                                  android:id="@+id/AllTrafficUnit_textView" android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        <View android:background="#cc000000" android:layout_width="0.5dip" android:layout_height="fill_parent"
              android:layout_marginTop="36.0dip" android:layout_marginBottom="84.0dip" android:alpha="0.15"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/Right_linearLayout"
                      android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical"
                          android:id="@+id/bottomLeft_LinearLayout" android:layout_width="fill_parent"
                          android:layout_height="125.0dip">
                <TextView android:textSize="14.0sp" android:textColor="#cc000000" android:id="@+id/mouth_used_summary"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_marginTop="36.0dip" android:text="@string/MouthUsed" android:alpha="0.8"/>
                <FrameLayout android:id="@+id/bottomLeftOutside_LinearLayout" android:layout_width="wrap_content"
                             android:layout_height="fill_parent">
                    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical"
                                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                                  android:layout_marginTop="30.0dip">
                        <ImageView android:id="@+id/traffic_no_set_up_stats_drawable_3"
                                   android:background="@drawable/traffic_have_no_setup_detail_stats"
                                   android:layout_width="wrap_content" android:layout_height="wrap_content"
                                   android:visibility="invisible"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:id="@+id/bottomLeftInside_LinearLayout"
                                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_marginTop="2.0dip">
                        <TextView style="@style/txt_one" android:layout_marginTop="10dp"
                                  android:id="@+id/MTrafficNumber_textView" android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"/>
                        <TextView style="@style/txt_one" android:layout_marginTop="10dp"
                                  android:id="@+id/MTrafficUnit_textView" android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
            <View android:background="#cc000000" android:layout_width="wrap_content" android:layout_height="0.5dip"
                  android:layout_marginRight="14.0dip" android:alpha="0.15"/>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical"
                          android:id="@+id/topRight_LinearLayout" android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="#cc000000" android:id="@+id/to_clearday_summary"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_marginTop="32.25dip" android:text="@string/toClearDay"
                          android:singleLine="true" android:alpha="0.8"/>
                <FrameLayout android:id="@+id/topRightOutSide_LinearLayout" android:layout_width="wrap_content"
                             android:layout_height="fill_parent">
                    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical"
                                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                                  android:layout_marginTop="30.0dip">
                        <ImageView android:id="@+id/traffic_no_set_up_stats_drawable_4"
                                   android:background="@drawable/traffic_have_no_setup_detail_stats"
                                   android:layout_width="wrap_content" android:layout_height="wrap_content"
                                   android:visibility="invisible"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:id="@+id/topRightInside_LinearLayout"
                                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_marginTop="2.0dip">
                        <TextView style="@style/txt_one"
                                  android:id="@+id/ToCountDate_textView" android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"/>
                        <TextView android:textSize="30.0sp" android:textColor="#cc313131"
                                  android:id="@+id/ToCountDateUnit_textView" android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" android:includeFontPadding="false"
                                  android:fillViewport="false"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>